Changes with Apache 1.3.10

  *) EBCDIC: Fixed binary upload capability (plain and chunked) for
     all methods using the ap_*_client_block() functions, most notably
     POST and PUT. The functionality to switch input between protocol
     parts (chunks) and (possibly binary) data had been missing all
     the time, making chunked PUT impossible until now.
     [Martin Kraemer]

  *) Fixed a recently introduced off-by-one-character bug in 
     mod_rewrite's expansion of expression back-references.
     [Cliff Woolley <jwoolley@wlu.edu>] PR#4766 PR#5389

  *) Add IndexOptions DescriptionWidth so that the width of the
     description field in fancy-indexed directory listings can
     be specified.
     [Ken Coar] PR#2324, plus lots that are closed unsatisfied

  *) EBCDIC: Escaped characters were encoding the ebcdic representation
     of the special characters, not the latin1 representation. This
     would result in invalid URI's for, e.g., filenames (with special chars)
     in mod_autoindex.c [Martin Kraemer]

  *) EBCDIC: Fix Byte Ranges for EBCDIC platforms. The necessary switch
     between implied conversion for protocol parts and configured
     conversion for document data was missing. The effect of this was that
     PDF files could not be read by Acrobat Reader (which sends long
     lists of byte ranges in each request) when the server was apache
     on ebcdic machines.
     [Noted by Oliver Reh <Oliver.Reh@FAEDV-N.Bayern.de>, solved by
     Martin Kraemer]

  *) Add IndexOptions FoldersFirst to allow fancy-indexed directory
     listings to have the subdirectories always listed at the top.
     [Ken Coar]

  *) BS2000: Use send() instead of write() in the core buff routines
     for better performance and fewer restrictions (max. transfer size)
     [Martin Kraemer]

  *) If the compiler sanity check fails, force the verbose output
     for TestCompile so people can have a clue what the problem
     is. [Jim Jagielski]
